# Notes

./: Python DSA.ipynb  index.html
ANN-Foundation/: .gitignore  Predicting_Bike_Rental_Demand.py  README.md  bike_model_weights.pkl  mlp_weights.pkl  problem.py  pyproject.toml  requirements.txt  setup.py
ANN-Foundation/ann_foundation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ANN-Foundation/data/: .gitignore  README.md  requirements.txt
ANN-Foundation/examples/: Decision-Boundary-Visualization.ipynb
ANN-Foundation/notebooks/: Automatic Gradient.ipynb  Automatic-Gradient.ipynb  Micrograd from Scratch.ipynb  foundation.ipynb  micrograd_lecture_first_half_roughly.ipynb  ref.ipynb
ANN-Foundation/reference/: 01_autograd_demo.ipynb  02_mlp_training.ipynb  03_decision_boundary.ipynb  engine.py  micrograd_from_scratch.ipynb  nn.py  setup.py  struture.txt  test_engine.py  test_nn.py  train_moons.py
ANN-Foundation/src/: __init__.py  engine.py  nn.py  pyproject.toml  utils.py
ANN-Foundation/src/micrograd/: __init__.py  def test_value_initialization().py  engine.py  nn.py  utils.py
ANN-Foundation/tests/: test_engine.py  test_nn.py
Data_Structure/: LICENSE  README.md  sources.txt
Data_Structure/C/: AVLTree.c  BinarySearch.c  BinarySearchTree.c  BinaryTree.c  BubleSort.c  DirectedGraph.c  GenaralTree.c  HashTable.c  HashTableLinearProbing  HashTableLinearProbing.c  HashtaleChaining  HashtaleChaining.c  LinearSearch  LinearSearch.c  LinkedListReverse.c  QueueUsingArray  QueueUsingArray.c  RedBlackTree.c  StackUsingArray  StackUsingArray.c  StackUsingLinkedList  (+3 more)
(+51 files in other folders)
