[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ann-foundation"
version = "0.1.0"
description = "A foundational neural network library from scratch"
authors = [
    {name = "RAHUL KP KURUP"}
]

urls = { "Repository" = "https://github.com/hellorahulkp" }

# Core dependencies for the actual neural net code
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "graphviz>=0.20",
]
requires-python = ">=3.8"

# Optional dependencies for notebooks and testing
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "nbconvert>=7.16.0",
    "jupyter_client>=8.0.0",
    "playwright>=1.40.0",
    "nbformat>=5.10.0",
    "ipykernel>=6.29.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]